Save | edited home.html subtitle

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -23,7 +23,7 @@
                     
                 </div>
                 <div class="intro_text">
-                    <h1>총알오징어, 세마리에 만원</h1>
+                    <h1>여름특가!! 총알오징어, 세마리에 이천만원!!</h1>
                     <h4 class="contents">우리는 전기를 이용해 실수인척 새끼 오징어를 불법 포획합니다</h4>
                 </div>
             </div>
